# aibrd

./: .vscodeignore  FEATURES.md  PLAYBOOK.md  README.md  README_bkp.md  aibrd-executive-deck.pptx  aibrd-product-deck.pptx  package.json  tsconfig.json
.github/workflows/: aibrd-reusable.yml
md-templates/: README.md  team_standards.md
prompts/: README.md  advocate-adr.md  advocate-devil.md  api-contracts.md  change-impact.md  compliance-map.md  extract-requirements.md  gap-analysis.md  generate-test-cases.md  judge-review.md  mediate-design.md  po-progress-report.md  pr-description.md  release-notes.md  sprint-feed.md  update-requirement.md  validate-context.md
pythonlibrary/: PLAYBOOK.md  README.md  pyproject.toml  requirements.txt
pythonlibrary/aibrd/: __init__.py  chunker.py  cli.py  registry.py
pythonlibrary/aibrd/analyzers/: gap_detector.py  stale_detector.py  test_linkage.py  validator.py
pythonlibrary/aibrd/extractors/: acceptance_criteria.py  actors.py  flows.py  module_detector.py  rules.py
pythonlibrary/aibrd/generators/: ambiguity_report.py  api_contracts.py  compliance_mapper.py  conflict_detector.py  context_md.py  po_report.py  rtm.py  sprint_feed.py  test_cases.py
pythonlibrary/aibrd/llm/: client.py
pythonlibrary/aibrd/models/: brd.py  module.py  outputs.py
pythonlibrary/aibrd/parsers/: __init__.py  confluence.py  docx.py  markdown.py  pdf.py
pythonlibrary/aibrd/workspace/: writer.py
scripts/: build_ppt.py
src/: extension.ts
vscode-extension/: README.md  package.json  tsconfig.json
vscodebase/: package.json
(+85 files in other folders)
