[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aibrd"
version = "0.1.0"
description = "BRD to living specification — actors, flows, rules, test cases, RTM, release notes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "anirudhyadav" }]
keywords = ["brd", "requirements", "traceability", "llm", "specification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
aibrd = "aibrd.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aibrd*"]

[tool.ruff]
line-length = 100
target-version = "py310"
